# libnpymath-test

./: .gitignore  README.md  meson.build  meson.options
.github/workflows/: build.yml
npymath/_build_utils/: process_src_template.py
npymath/core/: config.h.in  meson.build
npymath/core/include/: meson.build
npymath/core/include/numpy/: _npymathconfig.h.in  halffloat.h  npy_math.h  npymath_common.h  npymath_cpu.h  utils.h
npymath/core/src/common/: float_status.hpp  half.hpp  half_private.hpp  npdef.hpp  npstd.hpp  npymath_config.h  npymath_fpmath.h  utils.hpp
npymath/core/src/npymath/: halffloat.cpp  ieee754.c.src  ieee754.cpp  npy_math_complex.c.src  npy_math_private.h
numpy/: meson.build
numpy/_build_utils/: process_src_template.py
numpy/core/: config.h.in  meson.build
numpy/core/include/: meson.build
numpy/core/include/numpy/: _numpyconfig.h.in  npy_common.h  npy_cpu.h  numpyconfig.h  utils.h
numpy/core/src/common/: common.hpp  half.hpp  npy_config.h  npy_fpmath.h
numpy/core/src/npymath/: npy_math_private.h
src/: halffloat.c  halffloat.cpp  ieee754.c.src  ieee754.cpp  meson.build  npy_math.c  npy_math_common.h  npy_math_complex.c.src  npy_math_internal.h.src  npy_math_private.h  npymath_meson_config.h.in
src/common/: common.hpp  float_status.hpp  half.hpp  npstd.hpp  npymath_config.h  npymath_fpmath.h
src/include/: halffloat.h  meson.build  npy_math.h  npymath_common.h  npymath_config.h  npymath_endian.h  npymath_fpmath.h  npymathconfig.h
src/include/numpy/: halffloat.h  npy_math.h
src/include/numpy/npymath/: block.h  common.h  config.h  cpu.h  endian.h  fpmath.h  internal.h.src  meson.build  private.h
